--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,12 @@ include_directories(include)
 
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -g")
 
+set(TOKEN_SRC
+    src/token/token.cpp
+)
+
 set(SOURCES
+    ${TOKEN_SRC}
     src/main.cpp
 )
 
