--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(include)
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -g")
 
 set(UTILS_SRC
+    src/utils/utils.cpp
     src/utils/string_pool.cpp
 )
 
@@ -14,9 +15,9 @@ set(TOKEN_SRC
 )
 
 set(SOURCES
+    src/main.cpp
     ${UTILS_SRC}
     ${TOKEN_SRC}
-    src/main.cpp
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
