Renamed Lex to Scanner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,16 +14,16 @@ set(TOKEN_SRC
     src/token/token.cpp
 )
 
-set(LEX_SRC
-    src/lex/lex_state.cpp
-    src/lex/lex.cpp
+set(SCANNER_SRC
+    src/scanner/scanner_state.cpp
+    src/scanner/scanner.cpp
 )
 
 set(SOURCES
     src/main.cpp
     ${UTILS_SRC}
     ${TOKEN_SRC}
-    ${LEX_SRC}
+    ${SCANNER_SRC}
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
