parsing pointer and reference type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(AST_SRC
     src/ast/variable.cpp
     src/ast/type.cpp
     src/ast/named_type.cpp
+    src/ast/indirection_type.cpp
     src/ast/template_list.cpp
     src/ast/identifier.cpp
     src/ast/expression.cpp
