--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ set(AST_SRC
     src/ast/compound_statement.cpp
     src/ast/literal_expression.cpp
     src/ast/binary_expression.cpp
+    src/ast/unary_expression.cpp
+    src/ast/expression_list.cpp
 )
 
 set(PARSER_SRC
