Added elif statement. Missing else

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(AST_SRC
     src/ast/compound_statement.cpp
     src/ast/while_statement.cpp
     src/ast/if_statement.cpp
+    src/ast/elif_statement.cpp
     src/ast/literal_expression.cpp
     src/ast/binary_expression.cpp
     src/ast/unary_expression.cpp
