--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ set(AST_SRC
     src/ast/while_statement.cpp
     src/ast/if_statement.cpp
     src/ast/elif_statement.cpp
+    src/ast/else_statement.cpp
     src/ast/literal_expression.cpp
     src/ast/binary_expression.cpp
     src/ast/unary_expression.cpp
