Created expr_stmt and refactoring scope_builder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(AST_SRC
     src/ast/binary_expression.cpp
     src/ast/unary_expression.cpp
     src/ast/expression_list.cpp
+    src/ast/expression_statement.cpp
 )
 
 set(PARSER_SRC
